<?xml version="1.0" encoding="utf-8"?>  
<RelativeLayout    
    android:id="@+id/RelativeLayoutDetailCallLog"    
    android:layout_width="fill_parent"    
    xmlns:android="http://schemas.android.com/apk/res/android"    
    android:layout_height="fill_parent"    
    android:paddingBottom="4dip"    
    android:paddingLeft="12dip"  
    android:paddingRight="12dip">  
<ImageView 
    android:src="@drawable/anonymous_caller"
    android:layout_alignParentLeft="true"      
    android:layout_width="50dp"        
    android:layout_height="50dp"        
    android:id="@+id/contactorimg1" />
<TextView    
    android:layout_height="wrap_content"    
    android:textSize="20dip"
    android:layout_width="wrap_content"    
    android:layout_toRightOf="@+id/contactorimg1"    
    android:id="@+id/display_name" />  
<TextView    
    android:text="@string/calllog_location"    
    android:textSize="20dp"
    android:layout_height="wrap_content"    
    android:layout_width="wrap_content"    
    android:layout_below="@+id/contactorimg1"    
    android:id="@+id/location"/>
<TextView    
    android:text="@string/calllog_type"    
    android:textSize="20dip"
    android:layout_height="wrap_content"    
    android:layout_width="wrap_content"    
    android:layout_below="@+id/location"    
    android:id="@+id/type"/>
<TextView    
    android:text="@string/calllog_company"    
    android:textSize="20dip"
    android:layout_height="wrap_content"    
    android:layout_width="wrap_content"    
    android:layout_below="@+id/type"    
    android:id="@+id/company"/>
<TextView    
    android:text="@string/calllog_department"    
    android:textSize="20dip"
    android:layout_height="wrap_content"    
    android:layout_width="wrap_content"    
    android:layout_below="@+id/company"    
    android:id="@+id/department"/>
<TextView    
    android:text="@string/calllog_position"    
    android:textSize="20dip"
    android:layout_height="wrap_content"    
    android:layout_width="wrap_content"    
    android:layout_below="@+id/department"    
    android:id="@+id/position"/>
<ListView android:layout_width="wrap_content"    
    android:layout_height="wrap_content"    
    android:layout_below="@+id/position"    
    android:id="@+id/calllogList" />  
</RelativeLayout>