<?xml version="1.0" encoding="utf-8"?>  
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"  
    android:id="@+id/cotactslayout"
    android:orientation="vertical"  
    android:layout_width="fill_parent"  
    android:layout_height="fill_parent" >  
    <EditText  
           android:id="@+id/blacklist_input"  
           android:layout_width="fill_parent"  
           android:layout_toLeftOf="@+id/blacklist_add"
           android:layout_height="wrap_content"/>  
      <Button  
           android:id="@+id/blacklist_add"  
           android:layout_width="80dp"  
           android:layout_height="wrap_content"  
           android:layout_alignParentRight="true"
           android:text="@string/button_add" />  
      <LinearLayout
             android:orientation="vertical" 
             android:layout_width="fill_parent" 
             android:layout_height="wrap_content"
             android:layout_below="@+id/blacklist_input"
             android:layout_above="@+id/blacklist_relativelayout">
      <ListView android:layout_width="wrap_content"    
                android:layout_height="fill_parent"    
                android:id="@+id/blacklist_editor" />  
      </LinearLayout> 
      <RelativeLayout
             android:id="@+id/blacklist_relativelayout"  
             android:orientation="vertical" 
             android:layout_width="fill_parent" 
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:background="#88ffffff"
             android:weightSum="2">
      <Button  
           android:id="@+id/blacklist_add_submit"  
           android:layout_width="100dp" 
           android:layout_height="wrap_content"  
           android:gravity="center_horizontal" 
           android:text="@string/button_ok" />  
      <Button  
           android:id="@+id/blacklist_add_cancel"  
           android:layout_width="100dp" 
           android:gravity="center_horizontal" 
           android:layout_height="wrap_content"  
           android:layout_toRightOf="@+id/blacklist_add_submit"
           android:text="@string/button_cancel" />  
      </RelativeLayout> 
</RelativeLayout> 